# tau

./: .gitignore  README.md  pyproject.toml  run_validate.sh  start_validator.sh
scripts/: validator_watchdog.sh
src/: cli.py  compare.py  config.py  cursor_runner.py  docker_solver.py  github_miner.py  openrouter_proxy.py  pipeline.py  r2.py  validate.py  workspace.py
