[project]
name = "swe-eval"
version = "0.1.0"
description = "Simple commit-mining and Cursor evaluation pipeline"
requires-python = ">=3.11"
dependencies = [
    "bittensor>=10.2.0",
    "boto3>=1.35.0",
    "httpx>=0.28.0",
]

[project.scripts]
tau = "tau_entrypoint:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "claude_runner",
    "cli",
    "compare",
    "config",
    "cursor_runner",
    "docker_solver",
    "eval",
    "github_miner",
    "openrouter_client",
    "openrouter_proxy",
    "pipeline",
    "r2",
    "solver_runner",
    "task_generation",
    "tau_entrypoint",
    "validate",
    "workspace",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
    "claude_runner",
    "cli",
    "compare",
    "config",
    "cursor_runner",
    "docker_solver",
    "eval",
    "github_miner",
    "openrouter_client",
    "openrouter_proxy",
    "pipeline",
    "r2",
    "solver_runner",
    "task_generation",
    "tau_entrypoint",
    "validate",
    "workspace",
]
